# prediction_vs_reality_logger

./: .env  .gitattributes  Dockerfile  Implementation_Plan.md  Prediction Vs Reality Logger SkeletonPRD.md  README.md  TESTING.md  TESTING_PHASE_CHECKLIST.md  config.yaml  find-replace.ps1  forecast_path_refactor.py  prediction_vs_reality_logger_skeleton.md  pyproject.toml  refactor_report.md  requirements.txt  restart_conversation.ipynb  results.csv  results_metadata.yaml  setup.py  validate_results.py  webhook_receiver.py
.github/workflows/: ci.yml
config/: results_schema.yaml
dashboard/: rolling_metrics.ipynb
forecast/: nq_daily_eval.csv
k8s/: cronjob.yaml
prediction_logger/: __init__.py  cli.py  config.py  forecast_schema.py  logger.py  notifications.py  sources.py  tensor_model.py  thinkorswim.py  translator.py  version.py
prediction_vs_reality_logger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_config.py  test_logger.py  test_notifications.py  test_sources.py  test_tensor_model.py  test_thinkorswim.py  test_translator.py  test_version.py
